<resources>
    <string name="app_name">Sentinel</string>

    <string name="enable_location_setting">Enable location settings</string>
    <string name="enable_bluetooth">Please enable bluetooth</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="device_disconnected">Device disconnected</string>

    <string name="nearby_devices">Nearby Devices</string>
    <string name="connect">CONNECT</string>
    <string name="scan">SCAN</string>
    <string name="select_date">Select Date</string>
    <string name="set_of_duration">Set Of Duration</string>
    <string name="send">SEND</string>
    <string name="manual_c">MANUAL</string>
    <string name="manual">Manual</string>
    <string name="test_c">TEST</string>
    <string name="test">Test</string>
    <string name="rtc">RTC</string>
    <string name="read">READ</string>
    <string name="write">WRITE</string>
    <string name="fan">Fan</string>
    <string name="go_to_position">Go To Position</string>
    <string name="confirm">CONFIRM</string>
    <string name="date">Date</string>
    <string name="erase">ERASE</string>
    <string name="reset">RESET</string>


    <string name="connecting">Connecting...</string>
    <string name="enable_location_permission">Please enable location permission for scan neearby devices from App permissions</string>
    <string name="address">Address</string>
    <string name="data">Data</string>
    <string name="read_response">Read Response :</string>
    <string name="enter_address_write">Enter address for write</string>
    <string name="enter_address_read">Enter address for read</string>
    <string name="enter_address_erase">Enter address for erase</string>
    <string name="enter_data_write">Enter data for write</string>
    <string name="enter_valid_data">Enter valid hax data</string>
    <string name="enter_set_of_duration">Enter Set of duration</string>
    <string name="set_of_duration_validation">Set of duration should be under 256</string>
    <string name="please_wait">Please wait...</string>
    <string name="device_response">Device Response</string>
    <string name="response_success">Success</string>
    <string name="response_parse_error">Parsing Error</string>
    <string name="response_unkonwn_error">Unknown Error</string>
    <string name="response_illegel_range_error">Illegal Range Error</string>
    <string name="response_crc_mismatch_error">CRC Mismatch Error</string>
</resources>
