<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F3F3"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".activity.TestActivity">

    <include layout="@layout/layout_header"
            android:id="@+id/ll_header"/>

    <LinearLayout
            android:id="@+id/ll_rtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/ll_header"
            android:padding="@dimen/main_activity_margin"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rtc"
                android:fontFamily="@font/poppins_medium"
                android:textSize="12sp"
                android:textColor="@color/grey_light_text"/>
        <TextView
                android:id="@+id/tv_rtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020-04-06 02 13:00:00"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/grey_dark_text"/>
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_rtc"
            android:scaleType="fitXY"
            android:src="@drawable/border"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="20dp"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey_light_text"
                android:textSize="12sp"/>

        <EditText
                android:id="@+id/et_read_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:textColor="@color/grey_dark_text"
                android:fontFamily="@font/poppins_semi_bold"
                android:background="@drawable/rect_grey"/>

        <TextView
                android:id="@+id/tv_read"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:text="@string/read"
                android:background="@drawable/rect_blue"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center"/>
        <TextView
                android:id="@+id/tv_read_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/read_response"
                android:layout_marginTop="6dp"
                android:textColor="@color/grey_dark_text"
                android:fontFamily="@font/poppins_medium"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey_line"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey_light_text"
                android:layout_marginTop="10dp"
                android:textSize="12sp"/>

        <EditText
                android:id="@+id/et_write_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:textColor="@color/grey_dark_text"
                android:fontFamily="@font/poppins_semi_bold"
                android:background="@drawable/rect_grey"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey_light_text"
                android:layout_marginTop="10dp"
                android:textSize="12sp"/>

        <EditText
                android:id="@+id/et_write_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:textColor="@color/grey_dark_text"
                android:fontFamily="@font/poppins_semi_bold"
                android:background="@drawable/rect_grey"/>

        <TextView
                android:id="@+id/tv_write"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:text="@string/write"
                android:background="@drawable/rect_blue"
                android:layout_marginTop="10dp"
                android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>