<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".activity.MainActivity">

    <include layout="@layout/layout_header"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/grey_light_text"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/main_activity_margin"
            android:layout_marginTop="@dimen/main_activity_margin"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginLeft="@dimen/main_activity_margin"
            android:layout_marginTop="8dp"
            android:background="@drawable/rect_grey"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:text="22-06-2020 13:00:00"
                android:textColor="@color/grey_dark_text"
                android:fontFamily="@font/poppins_semi_bold"/>

        <ImageView
                android:id="@+id/iv_calender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:padding="14dp"
                android:elevation="10dp"
                android:background="@drawable/rect_app_color"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_of_duration"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/grey_light_text"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/main_activity_margin"
            android:layout_marginTop="@dimen/main_activity_margin"/>

    <EditText
            android:id="@+id/et_setOfDuration"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/main_activity_margin"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="02"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="3"
            android:textColor="@color/grey_dark_text"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/rect_grey"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_activity_margin"
            android:layout_marginRight="@dimen/main_activity_margin"
            android:layout_marginTop="70dp"
            android:weightSum="3"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:text="@string/send"
                android:elevation="6dp"
                android:padding="8dp"
                android:background="@drawable/rect_blue"
                android:gravity="center"/>
        <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>
        <TextView
                android:id="@+id/tv_manual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:text="@string/manual_c"
                android:elevation="6dp"
                android:padding="8dp"
                android:background="@drawable/rect_app_color"
                android:gravity="center"/>
        <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>
        <TextView
                android:id="@+id/tv_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:text="@string/test_c"
                android:elevation="6dp"
                android:padding="8dp"
                android:background="@drawable/rect_orange"
                android:gravity="center"/>
    </LinearLayout>
</LinearLayout>