<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="#BF000000"
                android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@drawable/back_confirm_dialog"
            android:padding="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/confirm"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="#322C48"/>

            <ImageView
                    android:id="@+id/iv_close_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/close"
                    android:layout_alignParentRight="true"
                    android:paddingRight="5dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp"/>
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_line"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/date"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/grey_light_text"/>

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="22-06-2020 13:00:00"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/grey_dark_text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/set_of_duration"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/grey_light_text"/>

        <TextView
                android:id="@+id/tv_setOfDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="02"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/grey_dark_text"/>

        <TextView
                android:id="@+id/tv_dialog_send"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/send"
                android:textColor="@color/white"
                android:background="@drawable/rect_blue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:elevation="6dp"/>

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>